--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 sudo: false
-language: ruby
-script:
-   - bundle install
-   - bundle exec arduino_ci_remote.rb
+language: c++
+
 branches:
   only:
   - gh-pages
   - /.*/
+script:
+   - cd avionics
+   - bundle install
+   - bundle exec arduino_ci_remote.rb
